--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ email: Yuanzhisheng31@gmail.com
 description: " "
 keyword: "BY, BY Blog, ZHANG Xilin, xilin, 张茜琳 "
 url: "http://Yuanzhisheng.github.io"          # your host, for absolute URL
-baseurl: "/img/ZHANG Xilin.jpg"     # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/blog"     # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Yuanzhisheng" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "sunshine!"
-sidebar-avatar:     # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar:    "/image/ZHANG Xilin.jpg" # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
